Fix a bug with x axis scrollbar

--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -20,6 +20,7 @@ li {
 
 body {
   min-height: 100vh;
+  overflow-x: hidden;
   text-rendering: optimizeSpeed;
   position: relative;
   line-height: 1.5;
